# api_iris_model

./: .gitignore  Dockerfile  README.md  pyproject.toml
api_iris_model/: main.py  training.py
