[tool.poetry]
name = "api-iris-model"
version = "1.0.0"
description = ""
authors = ["Jairo Calderón"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.87.0"}
ipykernel = "^6.17.1"
scikit-learn = "1.0.2"
pandas = "^1.5.2"
joblib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
